--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,34 @@
 <div class="container">
-  LOGIN FORM
+  <form class="form-signin" [formGroup]="login">
+    <div class="alert alert-warning alert-dismissible" role="alert" *ngIf="message !== ''">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+        aria-hidden="true">&times;</span></button>
+      {{message}}
+    </div>
+    <h2 class="form-signin-heading">Please sign in</h2>
+
+    <label for="inputLogin" class="sr-only">Email address</label>
+    <input autocomplete="false" type="email" id="inputLogin" formControlName="login" class="form-control" placeholder="Email address"
+           name="login" required email/>
+    <div *ngIf="!login.get('login').valid && (login.dirty || login.touched)" class="alert alert-danger">
+      <div *ngIf="login.get('login').getError('required')">
+        Email is required.
+      </div>
+      <div *ngIf="login.get('login').getError('email') && !login.get('login').getError('required')">
+        Wrong format.
+      </div>
+    </div>
+
+
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input autocomplete="false" type="password" id="inputPassword" formControlName="password" class="form-control" placeholder="Password"
+           name="password" required/>
+    <div *ngIf="!login.get('password').valid && (login.dirty || login.touched)" class="alert alert-danger">
+      <div *ngIf="login.get('password').getError('required')">
+        Password is required.
+      </div>
+    </div>
+
+    <button class="btn btn-lg btn-primary btn-block" (click)="doLogin();" [disabled]="!login.valid" type="submit">Sign in</button>
+  </form>
 </div>
