--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,3 +1,34 @@
 <div class="container">
-  <h1>Hi <button class="btn btn-success" (click)="logout()">Logout</button></h1>
+  <h1>Hi, {{user.userName}} <button class="btn btn-success" (click)="logout()">Logout</button></h1>
+  <button class="btn btn-primary" style="float:right;" (click)="openTaskModal()">Add Task</button>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Due On</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let task of tasks">
+        <td>{{ task.title }}</td>
+        <td>{{task.dueOn | date:'yyyy/MM/dd'}}</td>
+        <td>
+          <button class="btn btn-primary" (click)="openTaskModal(task)">Edit Task</button>
+          <button class="btn btn-danger" (click)="removeTask(task._id)">Delete Task</button>
+        </td>
+      </tr>
+    <tr *ngIf="!tasks || !tasks.length">
+      <td colspan="3" align="center">
+        No tasks
+      </td>
+    </tr>
+    </tbody>
+  </table>
 </div>
+<app-modal-task
+  (onSuccess)="getTasks()"
+  (onClose)="closeModal()"
+  [isOpen]="modalData.isOpen"
+  [taskData]="modalData.taskData"
+></app-modal-task>
